# nrf_usb

./: .clang-format  .gitignore
projects/nrf/: .clang-format  .gitignore  CMakeLists.txt  usbd_next_prj.conf
projects/nrf/src/: main.c  main.h  project_config.h
projects/nrf/src/app/common/: basetype.h
projects/nrf/src/app/hdi/: hdi.c  hdi.h
projects/nrf/src/app/protocol/: at_cmd.c  at_cmd.h
projects/nrf/src/app/sys/: sys_err.c  sys_err.h
projects/nrf/src/hw/hal/: hal_cdc_acm_uart.c  hal_cdc_acm_uart.h  hal_uart.h  hal_usbd.c  hal_usbd.h
projects/nrf/v0_0_1/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  build_info.yml  cmake_install.cmake  compile_commands.json
projects/nrf/v0_0_1/Kconfig/: Kconfig.shield  Kconfig.shield.defconfig
projects/nrf/v0_0_1/Kconfig/boards/: Kconfig  Kconfig.defconfig  Kconfig.nrf52840dk_minimal  Kconfig.sysbuild
projects/nrf/v0_0_1/modules/cmsis/: cmake_install.cmake
projects/nrf/v0_0_1/modules/hal_nordic/: cmake_install.cmake
projects/nrf/v0_0_1/modules/mcuboot/: cmake_install.cmake
projects/nrf/v0_0_1/modules/nrf/: cmake_install.cmake
projects/nrf/v0_0_1/modules/nrfxlib/: cmake_install.cmake
projects/nrf/v0_0_1/zephyr/: .cmake.dotconfig.checksum  .config  .config.old  cmake_install.cmake  dts.cmake  edt.pickle  isr_tables.c  linker.cmd  linker.cmd.dep  linker_zephyr_pre0.cmd  linker_zephyr_pre0.cmd.dep  runners.yaml  zephyr.dts  zephyr.dts.d  zephyr.dts.pre  zephyr.elf  zephyr.hex  zephyr.map  zephyr.stat  zephyr_pre0.elf  zephyr_pre0.map
projects/nrf/v0_0_1/zephyr/arch/: cmake_install.cmake
(+41 files in other folders)
